# LinkedIn-Job-Scraper

./: .env.dagster  .env.template  .gitignore  ASSET_UPDATE_STRATEGY.md  AUTO_UPDATE_FIXED.md  AUTO_UPDATE_STRATEGIES.md  CLAUDE.md  CSV_LINKS_EXPLAINED.md  CSV_RELATIONSHIPS.md  CSV_RELATIONSHIPS_ANSWER.md  DAGSTER_COMPLETE_GUIDE.md  DAGSTER_IMPORT_FIX.md  DAGSTER_QUICK_START.md  DAGSTER_README.md  DATABASE_ASSETS_GUIDE.md  DATA_VERSIONING_GUIDE.md  INITIALIZATION_GUIDE.md  MATERIALIZED_ASSETS_GUIDE.md  README.md  RELATIONSHIPS_QUICK_REF.md  RELATIONSHIPS_SUMMARY.md  SCHEDULED_JOBS_GUIDE.md  SENSOR_CONFIG_FIXED.md  analysis.ipynb  apply_jobs.py  claude_apply.py  dagster.yaml  details_retriever.py  linkedin_apply.py  pyproject.toml  requirements.txt  run_dagster.sh  run_jobs.sh  script_engine.py  search_retriever.py  setup_dagster.sh  view_assets.py
.claude/agents/: log-bug-detector.md
scripts/: __init__.py  auto_materialize.py  create_db.py  dagster_db_assets.py  dagster_relationships.py  dagster_retrievers.py  definitions.py  fetch.py  no_persist_io_manager.py
