[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-job-scraper"
version = "0.1.0"
description = "LinkedIn Job Scraper with Dagster integration"
authors = [{name = "LinkedIn Job Scraper Contributors"}]
dependencies = [
    "selenium>=4.14.0",
    "requests>=2.31.0",
    "pandas>=2.1.1",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.2",
    "wordcloud>=1.8.2",
    "dagster>=1.12.18",
    "dagster-webserver>=1.12.18",
]

[tool.dagster]
module_name = "scripts.definitions"
